--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.24.1",
+    "node-sass": "^4.0.0",
+    "sass-loader": "^4.1.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   }
 }
