--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "autoprefixer": "^6.5.4",
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
@@ -11,11 +12,11 @@
     "html-webpack-plugin": "^2.24.1",
     "jquery": "^3.1.1",
     "node-sass": "^4.0.0",
+    "postcss-loader": "^1.2.1",
     "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
